samplecode/apps/httpd/base/httpd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-frontend
  labels:
    app: httpd-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd-frontend
  strategy:
    type: RollingUpdate
    rollingParams:
      updatePeriodSeconds: 1 
      intervalSeconds: 1 
      timeoutSeconds: 120 
      maxSurge: "20%" 
      maxUnavailable: "10%" 
      pre: {} 
      post: {}
  template:
    metadata:
      labels:
        app: httpd-frontend
    spec:
      containers:
      - image: registry.redhat.io/rhel8/httpd-24
        imagePullPolicy: Always
        name: httpd-rhel7
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 8443
          name: https-port
      serviceAccountName: httpd-serviceaccount
      serviceAccount: httpd-serviceaccount
