samplecode/apps/httpd/base/httpd-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: collections-api
  name: collections-api
spec:
  to:
    kind: Service
    name: collections-api
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
